--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".SaveCoord">
+        <receiver android:name=".BroadcastCoord">
             <intent-filter>
                 <action android:name="broadcast_coor"/>
             </intent-filter>
